Admin dashboard Information tile

--- a/EventFinder-UI/src/styles/AdminDashboard.css
+++ b/EventFinder-UI/src/styles/AdminDashboard.css
@@ -166,3 +166,40 @@ button {
   display: flex;
   justify-content: space-between;
 }
+.tiles-container {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.tile {
+  width: 150px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  color: #fff;
+  font-size: 14px;
+  text-align: center;
+  margin: 0 10px; 
+}
+
+.tile.all {
+  background-color: #63869d;
+}
+
+.tile.approved {
+  background-color: #5ec489;
+}
+
+.tile.pending {
+  background-color: #ad9b55;
+}
+
+.tile.rejected {
+  background-color: #b1675f;
+}
+
