--- a/EventFinder-UI/src/styles/LoginForm.css
+++ b/EventFinder-UI/src/styles/LoginForm.css
@@ -1,10 +1,10 @@
 .login-form-container {
-    max-width: 400px;
     margin: 0 auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f9f9f9;
+    min-height: 100vh;
   }
   
   .login-form {
