Added Form validation for Create Event page and Edit pop up in Admin dashboard

--- a/EventFinder-UI/src/styles/AdminDashboard.css
+++ b/EventFinder-UI/src/styles/AdminDashboard.css
@@ -208,3 +208,10 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+.error {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+  display: block;
+}
