--- a/EventFinder-UI/src/styles/CreateEvent.css
+++ b/EventFinder-UI/src/styles/CreateEvent.css
@@ -44,3 +44,10 @@
     background-color: #0056b3;
   }
   
+  .error {
+    color: red;
+    font-size: 12px;
+    margin-top: 5px;
+    display: block;
+  }
+  
