--- a/EventFinder-UI/src/styles/Dashboard.css
+++ b/EventFinder-UI/src/styles/Dashboard.css
@@ -1,10 +1,10 @@
 /* Container for the entire dashboard */
 .dashboard-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #f7f7f7;
-    min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f7f7f7;
+  min-height: 100vh;
   }
   
   /* Header styling */
@@ -18,12 +18,42 @@
   }
   
   /* Main content area */
-  .dashboard-content {
+  .dashboard {
+    display: flex;
     width: 80%;
     margin-top: 20px;
+  }
+  
+  /* Left of table tile area */
+  .sidebar {
+    width: 200px;
+    background-color: #2c3e50;
+    color: white;
+    padding: 20px;
+    margin-right: 20px;
+    border-radius: 10px;
+  }
+  
+  .sidebar ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .sidebar ul li {
+    padding: 10px;
+    cursor: pointer;
+  }
+  
+  .sidebar ul li.active {
+    background-color: #34495e;
+    border-radius: 5px;
+  }
+
+  .content {
+    flex-grow: 1;
+    padding: 20px;
     background-color: white;
     border-radius: 10px;
-    padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
   
