--- a/EventFinder-UI/src/styles/Dashboard.css
+++ b/EventFinder-UI/src/styles/Dashboard.css
@@ -165,11 +165,11 @@
   }
   
   /* Responsive Design */
-  @media (max-width: 768px) {
+  @media (min-width: 768px) {
     .dashboard-content {
-      width: 95%;
+      width: 100%;
     }
-  
+
     .event-table th,
     .event-table td {
       padding: 6px;
@@ -186,3 +186,24 @@
     }
   }
   
+  @media (max-width: 576px) {
+    .dashboard-content {
+      width: 100%;
+
+      .event-table th,
+      .event-table td {
+        padding: 6px;
+      }
+    
+      .button-rsvp,
+      .button-remove {
+        font-size: 10px;
+        padding: 6px 10px;
+      }
+    
+      .rsvp-popup-content {
+        width: 90%;
+      }
+
+    }
+  }
